# trap_kaggle_23

./: .gitignore  README.md  pyproject.toml
src/trap/: __init__.py  av.ipynb  crossval.py  ensemble.ipynb  fft.ipynb  gbm.ipynb  gbm_with_test.ipynb  knn.ipynb  memo.md  nural.ipynb  prompt.md  randomseed.py  rankav.ipynb  simple.py  umap.ipynb
