[project]
name = "trap"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "trasta", email = "trasta298@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "pytorch-lightning>=2.0.7",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "lightgbm>=4.0.0",
    "tqdm>=4.66.1",
    "gensim>=4.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.0.5",
]

[tool.hatch.metadata]
allow-direct-references = true
